--- a/popup.css
+++ b/popup.css
@@ -56,7 +56,7 @@
     background: #fff;
     padding: 15px;
     margin: 15px 0;
-    min-height: 200px;
+    min-height: 50px;
     height: auto;
     border: 1px solid #bdc3c7;
     border-radius: 5px;
@@ -87,6 +87,6 @@
     border-radius: 5px;
     font-size: 0.9em;
     color: #2c3e50;
-    text-align: center;
+    text-align: left;
   }
   
